--- a/QuickSort/Properties/Resources.resx
+++ b/QuickSort/Properties/Resources.resx
@@ -134,9 +134,12 @@
     <value>..\Resources\наруто.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="s" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\саске.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="String" xml:space="preserve">
     <value>pbArray1</value>
+  </data>
+  <data name="String1" xml:space="preserve">
+    <value>quick_sort_helper(list, start, pivot - 1)</value>
   </data>
 </root>
